# FlashCosyVoice

./: .flake8  .gitignore  README.md  pyproject.toml  test_weight_loader.py
assets/: CosyVoice-BlankEN.weight_name  flow.pt.weight_name  hift.pt.weight_name  llm.pt.weight_name
flashcosyvoice/: cli.py  config.py  cosyvoice2.py
flashcosyvoice/engine/: block_manager.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
flashcosyvoice/modules/: flow.py  hifigan.py  qwen2.py  sampler.py
flashcosyvoice/modules/flow_components/: estimator.py  upsample_encoder.py
flashcosyvoice/modules/hifigan_components/: layers.py
flashcosyvoice/modules/qwen2_components/: layers.py
flashcosyvoice/utils/: audio.py  loader.py
